k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-dash
  namespace: team-factory
spec:
  type: ClusterIP
  selector:
    app: stock-dash
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
