k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-dash
  namespace: team-factory
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: stock-dash-dev.sasriya.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stock-dash
            port:
              number: 80
